chore: migrate workshop to Kiro IDE, add .gitignore, MIT license, .kiro config
- Rename Amazon Q Developer references to Kiro IDE across all modules
- Migrate .amazonq/rules/ to .kiro/steering/ directory
- Replace Amazon-Q-Developer-IDE-Workshop.md with Kiro-IDE-Workshop.md
- Add .kiro/ directory (steering, agents, hooks, specs) as workshop context
- Add .gitignore with proper exclusions for Java/Maven/IDE/OS files
- Add MIT LICENSE file
- Fix README placeholder links and add repo structure overview
- Update all module content with Kiro IDE features (Specs, Hooks, Skills, Agents, Powers)
- Update Quick Reference Guide, Workshop Agenda, and supporting docs